Adding serialization for the category field in a Category model
This solution is specific for databases like SQLite not PostgreSQL or MySQL

--- a/grapeapi_app/test/fixtures/categories.yml
+++ b/grapeapi_app/test/fixtures/categories.yml
@@ -1,15 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  text: 
-  array: MyString
-  true,: MyString
-  default: MyString
-  []: MyString
+  category: MyText
 
 two:
-  text: 
-  array: MyString
-  true,: MyString
-  default: MyString
-  []: MyString
+  category: MyText
