--- a/grapeapi_app/Gemfile
+++ b/grapeapi_app/Gemfile
@@ -25,6 +25,9 @@ gem 'bootsnap', '>= 1.4.2', require: false
 # Adding grapes to build the REST API
 gem 'grape'
 
+# Very useful gem to visualize API routes
+gem 'grape_on_rails_routes'
+
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
 
