Adding support to search with the Google Books API

--- a/grapeapi_app/Gemfile
+++ b/grapeapi_app/Gemfile
@@ -31,6 +31,9 @@ gem 'grape_on_rails_routes'
 # Adds support for the DB using the rails console
 gem 'hirb'
 
+# Adding support to search with the Google Books API
+gem 'google_books'
+
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
 
