--- a/grapeapi_app/Gemfile
+++ b/grapeapi_app/Gemfile
@@ -24,6 +24,7 @@ gem 'bootsnap', '>= 1.4.2', require: false
 
 # Adding grapes to build the REST API
 gem 'grape'
+gem "grape-entity"
 
 # Adding support to add HTTP requests
 gem 'httparty'
@@ -46,7 +47,6 @@ group :development, :test do
   gem 'rspec-rails'
   gem 'faker'
   gem 'factory_bot_rails'
-  gem 'database_cleaner'
 end
 
 group :development do
